<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/colorBlack"
    android:animateLayoutChanges="true"
    tools:context="sg.gov.dsta.DroneControl.MainActivity">


    <!-- map layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:id="@+id/map_overlay_layout" >

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

    </RelativeLayout>



    <!-- panel layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/waypoint_manager_relative_layout"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/waypoint_manager_linear_layout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlackTranslucent"
            android:padding="16dp"
            android:layout_alignParentBottom="true"
            android:animateLayoutChanges="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/panel_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/panel_title_waypoint_manager"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/sf_semibold"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLine"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/panel_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/subtitle_no_waypoints_created"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/sf_regular"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_add_waypoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:text="@string/button_add_waypoint"
                android:fontFamily="@font/sf_semibold"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_back_to_default_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorDarkGrayButton"
                android:text="@string/button_back"
                android:fontFamily="@font/sf_semibold"
                android:textSize="15sp"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/clear_and_next_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_clear_waypoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorDarkGrayButton"
                    android:text="@string/button_clear"
                    android:fontFamily="@font/sf_semibold"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btn_next_configure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorWhite"
                    android:text="@string/button_next"
                    android:fontFamily="@font/sf_semibold"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_back_to_waypoint_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorDarkGrayButton"
                android:text="@string/button_back_to_waypoint"
                android:fontFamily="@font/sf_semibold"
                android:textSize="15sp"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_start_flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:text="@string/button_start_flight"
                android:fontFamily="@font/sf_semibold"
                android:textSize="15sp"
                android:visibility="gone"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_stop_flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorDarkGrayButton"
                android:text="@string/button_stop_flight"
                android:fontFamily="@font/sf_semibold"
                android:textSize="15sp"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                android:textAllCaps="false"/>



        </LinearLayout>




    </RelativeLayout>



    <!-- camera layout-->
    <RelativeLayout
        android:id="@+id/camera_overlay_layout"
        android:layout_width="200dp"
        android:layout_height="112dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorBlack"
        android:animateLayoutChanges="true"
        android:layout_margin="16dp">

        <!-- Widget to see first person view (FPV) -->
        <dji.ux.widget.FPVWidget
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fpv_widget"/>

        <dji.ux.widget.FPVOverlayWidget
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fpv_overlay_widget"/>

        <RelativeLayout
            android:id="@+id/maskView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:visibility="visible"/>
    </RelativeLayout>




<!--    &lt;!&ndash; Pre-flight checklist panel &ndash;&gt;-->
<!--    <dji.ux.panel.PreFlightCheckListPanel-->
<!--        android:id="@+id/pre_flight_check_panel"-->
<!--        android:layout_width="400dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/signal"-->
<!--        custom:excludeItem="ESCStatus"-->
<!--        android:visibility="gone"/>-->



    <!-- Widgets in top status bar -->
    <LinearLayout
        android:id="@+id/signal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlackTranslucent"
        android:paddingRight="16dp"
        android:orientation="horizontal">

        <dji.ux.widget.PreFlightStatusWidget
            android:id="@+id/pre_flight_status_widget"
            android:layout_width="400dp"
            android:layout_height="34dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical">



            <dji.ux.widget.FlightModeWidget
                android:layout_width="103dp"
                android:layout_height="22dp"/>

            <dji.ux.widget.GPSSignalWidget
                android:layout_width="44dp"
                android:layout_height="22dp"/>

            <dji.ux.widget.VisionWidget
                android:layout_width="22dp"
                android:layout_height="22dp"/>

            <dji.ux.widget.RemoteControlSignalWidget
                android:layout_width="38dp"
                android:layout_height="22dp"/>

            <dji.ux.widget.VideoSignalWidget
                android:layout_width="38dp"
                android:layout_height="22dp"/>

            <dji.ux.widget.WiFiSignalWidget
                android:layout_width="22dp"
                android:layout_height="22dp"/>

            <dji.ux.widget.BatteryWidget
                android:layout_width="96dp"
                android:layout_height="22dp"
                custom:excludeView="singleVoltage"/>

            <dji.ux.widget.ConnectionWidget
                android:layout_marginTop="3dp"
                android:layout_width="18dp"
                android:layout_height="22dp"/>

        </LinearLayout>


    </LinearLayout>


    <!-- Remainng time widget layout-->
    <dji.ux.widget.RemainingFlightTimeWidget
        android:layout_below="@id/signal"
        android:layout_height="27dp"
        android:layout_width="match_parent"
        android:background="@color/transparent"
        />






</RelativeLayout>