<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="660dp"
    android:layout_height="310dp"
    android:background="@drawable/panel_white_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:src="@drawable/config_settings_reference"/>

    <LinearLayout
        android:layout_width="660dp"
        android:layout_height="310dp"
        android:orientation="horizontal"
        android:paddingHorizontal="32dp"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:paddingVertical="32dp"
        android:background="@drawable/panel_white_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_marginEnd="27dp"

            android:layout_weight="1">

            <TextView
                android:id="@+id/dialog_target_marking_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_target_marking_title"
                android:fontFamily="@font/sf_semibold"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dialog_target_marking_title"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_regular"
                    android:textColor="@color/colorLightGrayLine"
                    android:text="@string/dialog_target_marking_textview"
                    android:textSize="@dimen/config_settings_caps_text">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightGrayLine"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/target_type_radio_group">
                    <RadioButton
                        android:id="@+id/target_type_personel"
                        android:textSize="10sp"
                        android:paddingVertical="8dp"
                        android:checked="true"
                        android:background="@drawable/radio_flat_selector"
                        android:textColor="@color/colorWhite"
                        android:button="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:fontFamily="@font/sf_regular"
                        android:text="Personel"/>
                    <RadioButton
                        android:id="@+id/target_type_tank"
                        android:textSize="10sp"
                        android:paddingVertical="8dp"
                        android:checked="false"
                        android:background="@drawable/radio_flat_selector"
                        android:textColor="@color/colorWhite"
                        android:button="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:fontFamily="@font/sf_regular"
                        android:text="Tank"/>

                </RadioGroup>

            </LinearLayout>







            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_done_dialog"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/black_background_button"
                    android:text="@string/button_done"
                    android:fontFamily="@font/sf_semibold"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:visibility="visible"/>



                <Button
                    android:id="@+id/btn_cancel_dialog"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/black_background_button"

                    android:text="@string/button_cancel_configuration"
                    android:fontFamily="@font/sf_semibold"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:visibility="visible"/>


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dialog_target_screenshot"
                android:background="@color/colorDarkGrayButton"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Insert image of screenshot here"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                android:gravity="center"/>





        </RelativeLayout>

    </LinearLayout>








</RelativeLayout>
